tests/Tokens/unknown-escape.bel
"\g"

# RUN: %not %belalang build %s 2>&1 | %FileCheck %s
# CHECK: error: Unknown escape string
# CHECK:  --> {{.*}}/tests/Tokens/unknown-escape.bel:1:2
# CHECK:   |
# CHECK: 1 | "\g"
# CHECK:   |  ^^ Unknown escape string
# CHECK: Error: compilation failed due to previous errors
